data/Java/02-missing-void/1/[M]Error.txt
https://stackoverflow.com/questions/22270710/invalid-method-declaration-return-type-required-in-constructor?rq=1
Program.java:7: error: invalid method declaration; return type required
    public setStudentInfo(int IDnum,String Name,String Year)
           ^